--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,21 @@
+html{
+  width: 100%;
+  height: 100%;
+}
 body {
+  background-color: rgb(0, 50, 78);
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body #root {
+  height: 100%;
 }
 
 code {
